# lora-at

./: .gitignore  AtRestClient.py  CMakeLists.txt  README.md  platformio.ini  pytest_standalone.py  pytest_wifi.py  run_pytest.sh  run_wifi_pytest.sh  sdkconfig  sdkconfig.defaults  sdkconfig.heltec_wifi_lora_32  sdkconfig.ttgo-lora32-v1  sdkconfig.ttgo-lora32-v2  sdkconfig.wifi.0.ttgo-lora32-v2  sdkconfig.wifi.1.ttgo-lora32-v2
components/at_config/: CMakeLists.txt  at_config.c  at_config.h
components/at_handler/: CMakeLists.txt  at_handler.c  at_handler.h
components/at_rest/: CMakeLists.txt  at_no_rest.c  at_rest.c  at_rest.h
components/at_sensors/: CMakeLists.txt  at_no_sensors.c  at_sensors.c  at_sensors.h
components/at_timer/: CMakeLists.txt  at_timer.c  at_timer.h
components/ble_server/: CMakeLists.txt  ble_antenna_svc.c  ble_antenna_svc.h  ble_battery_svc.c  ble_battery_svc.h  ble_common.c  ble_common.h  ble_server.c  ble_server.h  ble_solar_svc.c  ble_solar_svc.h  ble_sx127x_svc.c  ble_sx127x_svc.h  no_ble_server.c
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  idf_component.yml  main.c  uart_at.c  uart_at.h
server/: bluez.py  configuration.json  configuration.py  connect_esp.sh  gatt.py  loraat.service  main.py  web.py
src/: BatteryVoltage.cpp  BatteryVoltage.h  Display.cpp  Display.h  main.cpp
test/: CMakeLists.txt  sdkconfig.defaults
test_host/: CMakeLists.txt  at_handler_test.c  at_util_test.c
test_host/mock/: Mockat_config.c  Mockat_config.h  Mockble_client.c  Mockble_client.h  Mockdisplay.c  Mocksx127x.c  Mocksx127x_util.h  at_config_mock_config.yaml  ble_client_mock_config.yaml  ble_client_mock_helper.h  display_mock_helper.h  esp_err.c  esp_err.h  sx127x_mock_helper.h  sx127x_util_mock_helper.h
(+94 files in other folders)
